# SubgraphMatching

./: .gitignore  CMakeLists.txt
configuration/: CMakeLists.txt  types.h
matching/: BuildTable.cpp  BuildTable.h  CMakeLists.txt  EdgeListToCSR.cpp  EvaluateQuery.cpp  EvaluateQuery.h  FilterVertices.cpp  FilterVertices.h  GenerateFilteringPlan.cpp  GenerateFilteringPlan.h  GenerateQueryPlan.cpp  GenerateQueryPlan.h  GraphConverter.cpp  SelectEdge.cpp  StudyPerformance.cpp  matchingcommand.cpp  matchingcommand.h  subgraph_matching_analysis.cpp  subgraph_matching_analysis.h
subgraph_matching_graph/: CMakeLists.txt  graph.cpp  graph.h
utility/: CMakeLists.txt  QFliter.h  bitsetoperation.cpp  bitsetoperation.h  commandparser.cpp  commandparser.h  computesetintersection.cpp  computesetintersection.h  graphoperations.cpp  graphoperations.h  pretty_print.h
utility/han/: intersection_algos.cpp  intersection_algos.hpp
utility/han/utils/: util.cpp  util.hpp
